# PingPongRobot

./: .gitignore  README.md
June/: CHATGPT_CONTEXT.md
Optitrack/: optitrack_hope_natnet_migration_summary.md  recording_analysis_2026-07-03.md
Optitrack/windows_natnet_adapter/: CMakeLists.txt  README.md  WINDOWS_SETUP.md
Optitrack/windows_natnet_adapter/config/: example_config.json
Optitrack/windows_natnet_adapter/include/optitrack_adapter/: config.hpp  jsonl_writer.hpp  mocap_types.hpp
Optitrack/windows_natnet_adapter/logs/: README.md
Optitrack/windows_natnet_adapter/scripts/: build_windows.ps1  run_smoke_test.ps1
Optitrack/windows_natnet_adapter/src/: config.cpp  jsonl_writer.cpp  main.cpp
Optitrack/windows_natnet_adapter/tests/: test_cpp_skeleton_output.py  test_example_config.py  test_replay_jsonl.py  test_windows_handoff_docs.py
Optitrack/windows_natnet_adapter/tools/: __init__.py  replay_jsonl.py
docs/superpowers/plans/: 2026-07-01-windows-natnet-adapter.md
docs/superpowers/specs/: 2026-07-01-windows-natnet-adapter-design.md
mocap/: __init__.py
mocap/hope_optitrack_adapter/: __init__.py  config.py  config.yaml  coordinate_adapter.py  diagnostics.py  hope_udp_json_receiver.py  main.py  natnet_receiver.py  ros_receiver.py  schema_adapter.py  types.py  validation.py  zmq_publisher.py
mocap/tests/: test_hope_optitrack_adapter.py
planner/: 7_11速滑馆.md  agent_collaboration_status.md  optitrack_mocap_bridge_plan.md  predict_node_0627.py  predict_node_0627_no_ros.py
